--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -253,6 +253,8 @@ Et menetä mitään sovellustietoja."</string>
   <string name="app_manager_show_detail_infos">Näytä kaikki</string>
   <string name="app_manager_start_by">Käynnistäjä %s</string>
   <string name="app_manager_system_mobile_disable">Poista data käytöstä</string>
+  <string name="app_manager_thumbnail_blur_summary">Sumenna sovelluksien esikatselut Viimeaikaisissa</string>
+  <string name="app_manager_thumbnail_blur_title">Sumenna sovelluksien esikatselut</string>
   <string name="app_manager_title">Hallitse sovelluksia</string>
   <string name="app_manager_total_size">Yhteensä</string>
   <string name="app_manager_uninstall">Poista</string>
@@ -1073,7 +1075,7 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="gigabyteShort">Gt</string>
   <string name="give_lucky_money">红包大派送</string>
   <string name="gmscore_support_remind">Poista tämä ominaisuus käytöstä jos kohtaat ongelmia Gmailin, Google Mapsin ja muiden Google-sovelluksien kanssa. Se vähentää hieman akun kestoa.</string>
-  <string name="gmscore_support_service">Google Palvelut</string>
+  <string name="gmscore_support_service">Googlen peruspalvelut</string>
   <string name="go_to">Jatka</string>
   <string name="go_to_setting_fingerprint">Asetukset</string>
   <string name="google_base_app_install_choice">Sovellus vaatii Google Services Frameworkin toimiakseen normaalisti, ladataanko ja asennetaanko se?</string>
@@ -1690,7 +1692,10 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="power_cell">Solu lepotilassa</string>
   <string name="power_center_auto_shutdown">Ajasta käynnistäminen/sammuttaminen</string>
   <string name="power_center_back">Takaisin</string>
+  <string name="power_center_battery_last">%s jäljellä</string>
   <string name="power_center_charge_time">%1$s kunnes täynnä</string>
+  <string name="power_center_dialog_msg_bottom">Voit lisätä akun kestoa jopa %1$d t %2$d min. Otetaanko Virransäästö käyttöön?</string>
+  <string name="power_center_dialog_msg_top">Virransäästön ollessa käytössä, MIUI suorittaa seuraavat optimoinnit:</string>
   <string name="power_center_hints_scan_danger_result">Voit korjata akkuongelmat nyt</string>
   <string name="power_center_list_item_auto_brightness">Säädä näytön kirkkaus automaattisesti</string>
   <string name="power_center_list_item_battery_status_time">t</string>
@@ -1698,8 +1703,11 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="power_center_list_item_deep_save_title">Lisäasetukset</string>
   <string name="power_center_list_item_set_lockscreen_time">Laita näyttö nukkumaan 30 sekunnin toimettomuuden jälkeen</string>
   <string name="power_center_main_percent_formatted">%s %%</string>
+  <string name="power_center_one_key_save">Optimoi</string>
   <string name="power_center_ontime_boot">Käynnistymisen aika</string>
   <string name="power_center_ontime_shutdown">Sammuttamisen aika</string>
+  <string name="power_center_power_save_summary_text">Nosta jäljellä olevaa aikaa jopa %1$d t %2$d min</string>
+  <string name="power_center_power_save_title_text">Virransäästö</string>
   <string name="power_center_repeat">Toista</string>
   <string name="power_center_scan_item_title_GPS">Säädä GPS:n tarkkuus</string>
   <string name="power_center_scan_item_title_abnormal">Akkuongelmia</string>
@@ -1710,12 +1718,14 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="power_center_scan_item_title_brightness">Säädä näytön kirkkaus</string>
   <string name="power_center_scan_item_title_clean_memory">Tyhjennä muisti</string>
   <string name="power_center_scan_item_title_hide">Hallitse akun käyttöä</string>
-  <string name="power_center_scan_item_title_power_saver">Ota Virransäästäjä käyttöön</string>
+  <string name="power_center_scan_item_title_power_saver">Ota Virransäästö käyttöön</string>
   <string name="power_center_scan_item_title_running_app">Taustalla toimivat sovellukset</string>
   <string name="power_center_scan_result_safe">Akkuongelmia ei löytynyt</string>
   <string name="power_center_state_off">Pois päältä</string>
   <string name="power_center_state_on">Päällä</string>
   <string name="power_center_stop_scan_title">Lopeta tarkistus</string>
+  <string name="power_center_super_save_summary_text">Nosta jäljellä olevaa aikaa jopa %1$d t %2$d min</string>
+  <string name="power_center_super_save_title_text">Äärimmäinen virransäästö</string>
   <string name="power_center_time_to_boot">Käynnistymisen aika</string>
   <string name="power_center_time_to_shutdown">Sammuttamisen aika</string>
   <string name="power_center_title">Akun optimointi</string>
@@ -1728,6 +1738,8 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="power_customize_giveup_change">Hylätäänkö muutokset?</string>
   <string name="power_dialog_cancel">Peruuta</string>
   <string name="power_dialog_ok">OK</string>
+  <string name="power_dialog_super_save_msg">Äärimmäinen virransäästö rajoittaa paljon virtaa vieviä ominaisuuksia ja vähentää laitteen suorituskykyä, jotta laitteen perusominaisuudet (esim. puhelut, tekstiviestit ja verkkoon yhdistäminen) ovat käytettävissä mahdollisimman kauan. Otetaanko Äärimmäinen virransäästö käyttöön?</string>
+  <string name="power_dialog_super_save_title">Äärimmäinen virransäästö</string>
   <string name="power_idle">Puhelin toimettomana</string>
   <string name="power_optimize_auto_catagory_title">Akkuongelmia</string>
   <string name="power_optimize_battery_save_idea">Optimoi akku</string>
@@ -1759,13 +1771,19 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="power_save_ps_close_setting">Poista taustapalvelut käytöstä (synkronointi, GPS) säästääksesi virtaa</string>
   <string name="power_save_ps_freeze">Jäädytä tustalla olevat sovellukset</string>
   <string name="power_save_ps_limit">Rajoita järjestelmäsovelluksien aktiviteettia</string>
-  <string name="power_save_started_summary_text">Virransäästäjä on käytössä. Se vähentää sovelluksien taustatyöskentelyä, lopettaa synkronoinnin ja minimoi järjestelmän animaatioita.</string>
+  <string name="power_save_started_summary_text">Virransäästö on käytössä. Se vähentää sovelluksien taustatyöskentelyä, lopettaa synkronoinnin ja minimoi järjestelmän animaatioita.</string>
   <string name="power_save_summary_text">Vähennä sovellusten taustatyöskentelyä, lopeta synkronointi ja minimoi järjestelmän animaatioita ottamalla Virransäästö käyttöön.</string>
   <string name="power_save_title_text">Virransäästö</string>
   <string name="power_screen">Näyttö</string>
+  <string name="power_setting_background_app_save_summary">Rajoita sovelluksien työskentelyä taustalla vaikuttamatta niiden toiminnallisuuteen</string>
+  <string name="power_setting_background_app_save_title">Taustavirransäästö</string>
+  <string name="power_setting_category_other">Lisäasetukset</string>
+  <string name="power_setting_power_save_summary_text">Optimoi järjestelmäasetukset säästääksesi virtaa</string>
+  <string name="power_setting_super_save_summary_text">Rajoita useita järjestelmätoimintoja säästääksesi virtaa</string>
   <string name="power_settings_category_title">Akun ilmaisin</string>
+  <string name="power_settings_lock_screen_saver_title">Lukitusnäytön asetukset</string>
   <string name="power_settings_number">Prosentti</string>
-  <string name="power_settings_saver_title">Virransäästäjä</string>
+  <string name="power_settings_saver_title">Virransäästö</string>
   <string name="power_settings_shape">Graafinen</string>
   <string name="power_settings_title">Aseta</string>
   <string name="power_settings_top">Yläpalkki</string>
@@ -1882,8 +1900,10 @@ Kalibroinnin aikana, MIUI lähettää tekstiviestin operaattorillesi saadakseen 
   <string name="quick_optimize_no_issue">Ei akkuongelmia</string>
   <string name="quick_optimize_no_issue_subtitle">Kaikki näyttää hyvältä</string>
   <string name="quick_optimize_no_issue_title">Akkuongelmia ei löytynyt</string>
+  <string name="quick_optimize_sub_battery_text">Noin %s jäljellä</string>
   <string name="quick_optimize_sub_summary_text">Lisättiin %s akun kestoon</string>
-  <string name="quick_optimize_suggest_battery_consume_too_fast">Puhelin käyttää paljon akkua, korjaa se</string>
+  <string name="quick_optimize_sub_summary_with_battery_text">Lisättiin %1$s, noin %2$s jäljellä</string>
+  <string name="quick_optimize_suggest_battery_consume_too_fast">Puhelin käyttää paljon virtaa, korjaa se</string>
   <string name="quick_optimize_suggest_battery_over_heat">Puhelin käy ylikuumana, korjaa se</string>
   <string name="quick_replay_list_title">Käytettävissä olevat sovellukset</string>
   <string name="quick_reply_title">Pikavastaukset</string>
@@ -2566,6 +2586,8 @@ Lisää saldoa napauttamalla."</string>
   <string name="usbsharenet_pc_exception_summary">Internetiin ei saada yhteyttä jaetulla USB-yhteydellä. Tarkista tietokoneesi internet-yhteys.</string>
   <string name="use_immediately">Käytä</string>
   <string name="user_define_title">Lisää sääntöjä</string>
+  <string name="user_guide">Pyyhkäise ylöspäin löytääksesi lisää tuoreita pelejä</string>
+  <string name="user_guide_title">Joystick valinnat</string>
   <string name="video_repeat">Toista uudelleen</string>
   <string name="virus_auto_update_engine">Automaattinen päivitys: %s</string>
   <string name="virus_scan_process_pre">%</string>
